Added icons and changed color

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,20 +13,28 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-balanced">
       <h1 class="title">Searches</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item menu-close href="#/app/search/kittens">
-          Kittens
+          <i class="icon ion-star"></i> Kittens
         </ion-item>
         <ion-item menu-close href="#/app/search/robots">
-          Robots
+          <i class="icon ion-pizza"></i>Robots
         </ion-item>
         <ion-item menu-close href="#/app/search/puppies">
-          Puppies
+          <i class="icon ion-person-stalker"></i> Puppies
         </ion-item>
+
+        <ion-item menu-close href="#/app/search/Rahul">
+          <i class="icon ion-thumbsup"></i>  Rahul
+        </ion-item>
+
+
+
+
       </ion-list>
     </ion-content>
   </ion-side-menu>
